<resources>
    <string name="app_name">Course Tracker</string>
    <string name="failed_to_load">Failed to load courseList.</string>
    <string name="no_description_found">No description found.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--General menu strings-->
    <string name="action_save">Save</string>

    <!--menu_main strings-->
    <string name="add_term">Add Term</string>

    <!--menu_term_detail strings-->
    <string name="add_course">Add Course</string>
    <string name="delete_term">Delete Term</string>
    <string name="delete_term_confirmation">Are you sure you want to delete this term?</string>
    <string name="delete_courses_first">Please delete all courses first</string>

    <!--menu_course_detail strings-->
    <string name="add_assessment">Add Assessment</string>
    <string name="add_note">Add Note</string>
    <string name="share_notes">Share Notes</string>
    <string name="edit_course">Edit Course</string>
    <string name="delete_course">Delete Course</string>

    <!--menu_assessment_detail strings-->
    <string name="edit_assessment">Edit Assessment</string>
    <string name="delete_assessment">Delete Assessment</string>

    <!--Add term/course strings-->
    <string name="not_set">Not Set</string>
    <string name="term_title">Term Title (e.g., Term 1, Term 2)</string>
    <string name="course_title">Course Title (e.g., C192, C777)</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="error_start_date">Please Select A Start Date</string>
    <string name="error_end_date">Please Select An End Date</string>
    <string name="start_date_colon">Start Date: </string>
    <string name="end_date_colon">End Date: </string>
    <string name="term_start_date_colon">Term Start Date: </string>
    <string name="term_end_date_colon">Term End Date: </string>
    <string name="course_mentor_name">Course Mentor Name</string>
    <string name="course_mentor_phone">Course Mentor Phone</string>
    <string name="course_mentor_email">Course Mentor Email</string>
    <string name="course_note">Course Note</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="dropped">Dropped</string>
    <string name="plan_to_take">Plan To Take</string>

    <!--Assessment-->
    <string name="assessments_colon">Assessments: </string>
    <string name="assessment_details_colon">Assessment Details: </string>
    <string name="test_score">Test Score</string>
    <string name="test_score_colon">Test Score: </string>
    <string name="scheduled_time_colon">Scheduled Time: </string>
    <string name="notification_time_colon">Notification Time: </string>
    <string name="objective_assessment">Objective</string>
    <string name="performance_assessment">Performance</string>
    <string name="title_activity_add_note">AddNoteActivity</string>

    <!--Note-->
    <string name="notes">Notes</string>
    <string name="notes_colon">Notes: </string>

    <!--Notifications-->
    <string name="notification_colon">Notification: </string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="assessment_time_notification">assessment start time is now!</string>
    <string name="start_date_notification">start date is now!</string>
    <string name="end_date_notification">end date is now!</string>

    <!--Error Messages-->
    <string name="enter_valid_data">Please set all fields</string>

</resources>
