<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
        android:id="@+id/add_term_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/term_title"/>

    <TextView
        android:id="@+id/add_term_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_date"/>

    <TextView
        android:id="@+id/add_term_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_date"/>

</LinearLayout>